style: исправить неточности, корректировка кода